--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- Logo top-left -->
   <div class="logo">
-    <img src="d:\Downloads\CSI_RSCOE-removebg-preview.png" alt="CSI Logo" />
+    <img src="https://csirscoe.netlify.app/lovable-uploads/e98759b5-602f-4fb5-ae20-b08305109a34.png" alt="CSI Logo" />
     <h1>CSI RSCOE</h1>
   </div>
 
@@ -123,7 +123,7 @@
           <h3>Join the WhatsApp Group</h3>
         </a>
         <a class="card" href="https://csirscoe.netlify.app/" target="_blank">
-          <img src="d:\Downloads\CSI_RSCOE-removebg-preview.png" alt="CSI Website"/>
+          <img src="https://csirscoe.netlify.app/lovable-uploads/e98759b5-602f-4fb5-ae20-b08305109a34.png" alt="CSI Website"/>
           <h3>Official CSI RSCOE website</h3>
         </a>
       </div>
@@ -204,3 +204,4 @@
   </script>
 </body>
 </html>
+
