--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <main>
     <section class="hero">
-      <h2>Welcome to <span style="color:#cfd8dc">CSI RSCOE</span> Socials</h2>
+      <h2>Welcome to CSI RSCOE Socials</h2>
       <p>Stay tapped in with our community — updates, events, and a sprinkle of young energy.</p>
     </section>
 
@@ -204,4 +204,5 @@
   </script>
 </body>
 </html>
+
 
