--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <!-- Logo top-left -->
   <div class="logo">
-    <img src="https://github.com/csirscoestudentchapter-ux/temp_socials/blob/main/CSI_RSCOE-removebg-preview.png" alt="CSI Logo" />
+    <img src="CSI_RSCOE-removebg-preview.png" alt="CSI Logo" />
     <h1>CSI RSCOE</h1>
   </div>
 
@@ -123,7 +123,7 @@
           <h3>Join the WhatsApp Group</h3>
         </a>
         <a class="card" href="https://csirscoe.netlify.app/" target="_blank">
-          <img src="https://github.com/csirscoestudentchapter-ux/temp_socials/blob/main/CSI_RSCOE-removebg-preview.png" alt="CSI Website"/>
+          <img src="CSI_RSCOE-removebg-preview.png" alt="CSI Website"/>
           <h3>Official CSI RSCOE website</h3>
         </a>
       </div>
@@ -204,6 +204,7 @@
   </script>
 </body>
 </html>
+
 
 
 
